public/css/styles.css
/* General Styles */
body {
  margin: 0;
  font-family: "Inter", sans-serif;
}

.bg-black {
  background-color: #000;
}

.text-white {
  color: #fff;
}
.text-black {
  color: #000;
}

.text-center {
  text-align: center;
}

.text-left {
  text-align: left;
}

.body-links {
  color: white;
  text-decoration: none;
  text-transform: uppercase;
}

.body-links:hover {
  text-decoration: underline;
}

/* Typography */
h1 {
  font-family: "Antonio", sans-serif;
  font-weight: 700;
}

h2 {
  font-family: "Antonio", sans-serif;
  font-weight: 600;
}

h3 {
  font-family: "Antonio", sans-serif;
  font-weight: 500;
}

h4,
h5,
h6 {
  font-family: "Antonio", sans-serif;
  font-weight: 400;
}

#about-me {
  margin: 5px 300px;
  padding: 150px;
}

/* Navbar */
.navbar {
  background-color: #000;
  color: #fff;
  padding: 10px 20px;
  text-transform: uppercase;
  font-family: "Oswald", sans-serif;
  font-weight: 300;
}

.navbar .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: relative; /* Add this to position the navbar-links relative to the container */
}


.navbar .navbar-brand a {
  color: #fff;
  text-decoration: none;
  font-size: 0.8em;
}

.navbar .navbar-links {
  flex: 1;
  display: flex;
  justify-content: center;
}

.navbar .navbar-links ul {
  list-style: none;
  margin: 0;
  padding: 20px 100px 20px 0;
  display: flex;
}

.navbar .navbar-links ul li {
  margin-left: 20px;
}

.navbar .navbar-links ul li a {
  font-family: "Oswald", sans-serif;
  color: #fff;
  text-decoration: none;
}

.navbar-toggler {
  display: none;
  background: none;
  border: none;
  font-size: 2rem;
  cursor: pointer;
  color: inherit;
}

.navbar-nav .nav-link {
  color: #fff !important;
}

/* Header */
#header {
  padding: 150px 0;
  text-align: center;
}

/* Sections */
.section-padding {
  padding: 100px 50px;
}

#description {
  font-size: 20px;
  margin: 5px 300px 0 300px;
  padding: 150px;
  text-transform: uppercase;
  font-weight: 400;
}
.description-black {
  color: #000;
}

#services ul {
  list-style: none;
  padding: 0;
}

#header h1 {
  font-family: "Oswald", sans-serif !important;
  font-weight: 700;
  font-size: 100px;
}

/* Footer */
.footer {
  background-color: #000;
  font-family: "Inter", sans-serif;
  text-transform: uppercase;
  font-weight: 400;
  color: #fff;
  padding: 20px;
  text-align: left;
}

.footer-links {
  margin-bottom: 10px;
}

.footer-links a {
  color: white;
  text-decoration: none;
  margin-right: 10px;
}

.footer-links a:hover {
  text-decoration: underline;
}
.footer .created-by {
  margin-top: 10px;
  font-size: 14px;
  opacity: 0.7;
  text-align: center;
}

.rights-reserved {
  opacity: 0.5;
}

/* About Section */
.about-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 20px;
}

.about-image img {
  border-radius: 50%;
  width: 350px; /* Adjusted size */
  height: 350px; /* Adjusted size */
  object-fit: cover;
  margin-bottom: 20px;
  padding-bottom: 20px; /* Add padding at the bottom */
}

.about-content {
  max-width: 800px;
  text-align: left;
  line-height: 1.6;
  padding: 20px;
}

.about-content h2 {
  font-size: 24px;
  margin-top: 20px;
}

.about-content ul {
  list-style: none;
  padding: 0;
}

.about-content ul li {
  margin-bottom: 10px;
}

/* Projects Section */
#projects {
  padding: 0 0 150px 0;
}

.projects-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 20px;
  padding: 20px;
}

.project-card {
  background-color: #fff;
  border: 1px solid #111;
  border-radius: 12px;
  padding: 2rem;
  width: 300px;
  text-align: left;
  box-shadow: 0 2px 12px rgba(0, 0, 0, 0.08);
}

.project-card h2 {
  font-size: 24px;
  margin-bottom: 10px;
}

.project-card p {
  font-size: 16px;
  line-height: 1.6;
  margin-bottom: 20px;
}

.project-card a {
  color: #0074d9;
  text-decoration: underline;
  font-weight: bold;
}

.project-card:hover {
  box-shadow: 0 4px 24px rgba(0, 0, 0, 0.15);
}

/* Photography Section */

#photography-introduction {
  margin: 5px 300px;
  padding: 150px;
  text-align: center;
  line-height: 1.6;
}
.services-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 20px;
  padding: 20px;
}

.service-card {
  background-color: #fff;
  border: 1px solid #111;
  border-radius: 8px;
  padding: 20px;
  width: 300px;
  text-align: left;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.service-card h3 {
  font-size: 24px;
  margin-bottom: 10px;
}

.service-card p {
  font-size: 16px;
  line-height: 1.6;
  margin-bottom: 20px;
}
.service-card:hover {
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
}
.logo {
  max-width: 200px; /* Adjust the size as needed */
  margin-top: 20px; /* Add some space above the logo */
}

.button-container {
  text-align: center;
  margin: 30px;
}

.btn {
  display: inline-block;
  padding: 10px 20px;
  font-size: 18px;
  color: #fff;
  background-color: #1a1a1a; /* Match the background color of service cards */
  border: 1px solid #333; /* Match the border color of service cards */
  border-radius: 5px;
  text-decoration: none;
  transition: background-color 0.3s ease, color 0.3s ease;
  text-transform: uppercase;
}

.btn:hover {
  background-color: #333; /* Darken the background color on hover */
  color: #fff; /* Ensure the text color remains white */
}

/* Gallery Section */
.gallery-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 10px;
  padding-bottom: 100px;
}

.gallery-item {
  flex: 1 1 calc(33.333% - 20px);
  box-sizing: border-box;
}

.gallery-item img {
  width: 100%;
  height: auto;
  display: block;
  border-radius: 5px;
}

/* Media Queries */

/* Mobile Devices (up to 767px) */
@media (max-width: 767px) {
  /* Styles for mobile devices */

  #description,
  #photography-introduction,
  #about-me {
    margin: 5px 20px;
    padding: 10px;
  }

  #header h1 {
    font-size: 50px;
  }

}

/* Tablets (768px to 1023px) */
@media (min-width: 768px) and (max-width: 1023px) {
  /* Styles for tablets */
  #description,
  #photography-introduction,
  #about-me {
    margin: 5px 100px;
    padding: 50px;
  }

  #header h1 {
    font-size: 75px;
  }
}

/* Small Desktops/Laptops (1024px to 1439px) */
@media (min-width: 1024px) and (max-width: 1439px) {
  /* Styles for small desktops/laptops */

  #photography-introduction,
  #description {
    margin: 5px 10px;
    padding: 100px;
  }
}

/* Large Desktops (1440px and above) */
@media (min-width: 1440px) {
  /* Styles for large desktops */
  #description {
    margin: 5px 400px;
    padding: 200px;
  }
}

